* Update jezvejs library and fix vertical alignment of selection element of DropDown

--- a/src/view/css/app.scss
+++ b/src/view/css/app.scss
@@ -437,7 +437,7 @@ label {
     white-space: nowrap;
     display: inline-block;
     flex-shrink: 1;
-    line-height: 30px;
+    line-height: var(--dd-combo-content-height);
   }
 }
 
